--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,56 @@ body {
 header {
     font-size: x-large;
     text-align: center;
+    background-color: #555;
+    color: #ddd;
+    padding: 5px;
+    font-family: Helvetica, sans-serif;
+    margin-bottom: 50px;
+}
+
+header a, header a:visited, header a:active {
+    background-color: #ddd;
+    color: #555;
+    text-decoration: none;
+}
+
+header a:hover {
+    background-color: #555;
+    color: #ddd;
+    text-decoration: underline;
 }
 
 footer {
     text-align: center;
-    padding: 0 0 30px;
+    background-color: #555;
+    color: #ddd;
+    padding: 5px;
+    font-family: Helvetica, sans-serif;
+    margin-top: 50px;
+}
+
+footer a, footer a:visited, footer a:active {
+    background-color: #ddd;
+    color: #555;
+    text-decoration: none;
+}
+
+footer a:hover {
+    background-color: #555;
+    color: #ddd;
+    text-decoration: underline;
+}
+
+a, a:visited, a:active {
+    background-color:  #5a5a5a;
+    color: #dedede;
+    padding: 0 3px 0 3px;
+}
+
+a:hover {
+    background-color: transparent;
+    color: #5a5a5a;
+    text-decoration: underline;
 }
 
 .wheelNavBig {
@@ -47,12 +92,21 @@ footer {
   }
 }
 
-.mandalaButton {
+.mandalaButtons {
+    font-size: 25px;
+    text-align: center; 
+}
+
+.mandalaButton,
+.mandalaButton:active {
     width: 100px;
     height: 100px;
     border-radius: 75px;
     cursor: pointer;
     font-size: large;
+    background-color: #555;
+    color: #ddd;
+    border: none;
 }
 
 .tradename {
